# bantay-paws

./: .gitignore  Dockerfile  dev.sh  fly.toml  pyproject.toml
app/: __init__.py  main.py
app/routes/: admin.py  news.py
app/utils/: auth.py  content.py  templates.py
content/: story.md
templates/: admin_edit_post.html  admin_login.html  admin_new_post.html  admin_posts_list.html  base.html  donate.html  news_detail.html  news_list.html  story.html
templates/partials/: slug_field.html
